2008-10-01  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* font.c (font_matching_entity): Reflect ATTRS in font selection.
	(font_find_for_lface) [HAVE_NS]: Don't ignore case.

2008-09-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dispnew.c (Fsend_string_to_terminal): Don't try to send a string to
	a suspended terminal.

2008-09-30  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (xd_signature): Use strcat instead of sprintf.

2008-09-30  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (MSDOS_SUPPORT): Remove ccl.elc and codepage.elc.

2008-09-30  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (move_it_to): Don't advance the iterator if the last tab
	in a continued line coincides with a line beginning.

2008-09-29  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfont.m (nsfont_trait_distance): Fix bug.
	(nsfont_list): Return a list rather than a vector (syncs with Handa
	changes of 2008-05-14).
	(nsfont_open): Improve logging.

2008-09-29  Andreas Schwab  <schwab@suse.de>

	* keyboard.c (syms_of_keyboard) <input-decode-map>: Doc fix.

2008-09-28  Martin Rudalics  <rudalics@gmx.at>

	* character.c (Fchar_resolve_modifiers): Rewrite Elisp function
	name as char-resolve-modifiers.
	Reported by: Markus Triska <markus.triska@gmx.at>

2008-09-28  Dan Nicolaescu  <dann@ics.uci.edu>

	* dispnew.c (init_display): Return earlier when running as a daemon.

2008-09-27  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfont.m (nsfont_draw): Fix up composition rendering (cmp_from, ...).

2008-09-27  Eli Zaretskii  <eliz@gnu.org>

	* composite.c (Fcomposition_get_gstring)
	(Fcompose_region_internal, Fcompose_string_internal)
	(Ffind_composition_internal): Doc fix.
	(syms_of_composite) <compose-chars-after-function>: Doc fix.
	(syms_of_composite) <auto-composition-function>: Doc fix.
	(syms_of_composite) <composition-function-table>: Doc fix.

2008-09-25  Chong Yidong  <cyd@stupidchicken.com>

	* search.c (wordify): New argument for lax word-ends.